Bug 31368 - _cairo_drm_surface_create_similar not defined
Summary: _cairo_drm_surface_create_similar not defined
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: xcb backend (show other bugs)
Version: 1.10.0
Hardware: x86 (IA32) Linux (All)
: medium critical
Assignee: Carl Worth
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-03 16:04 UTC by Peter Häring
Modified: 2011-03-16 08:04 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Peter Häring 2010-11-03 16:04:54 UTC
I got a compilation error with following configuration:

CFLAGS="-O2 -march=i686" ../cairo-1.10.0/configure --prefix=/sw/cairo-1.10.0-20101103/dest --disable-static --enable-xcb --enable-drm --enable-gallium --enable-xcb-drm --enable-gl --enable-xml

Compilations stops at cairo-xcb-surface.lo with following error message:

../../cairo-1.10.0/src/cairo-xcb-surface.c: In function '_cairo_xcb_surface_create_similar':
../../cairo-1.10.0/src/cairo-xcb-surface.c:192: error: implicit declaration of function '_cairo_drm_surface_create_similar'
../../cairo-1.10.0/src/cairo-xcb-surface.c:192: warning: nested extern declaration of '_cairo_drm_surface_create_similar'
../../cairo-1.10.0/src/cairo-xcb-surface.c:192: warning: assignment makes pointer from integer without a cast

Line 192 of cairo-xcb-surface.c is the only occurence of "_cairo_drm_surface_create_similar" in the whole source tree of cairo-10.0

Peter Häring
Comment 1 Uli Schlachter 2011-03-16 08:04:20 UTC
Fixed in master branch with 02b2e3c93fcc724815e8bda21c6874b0d050ae02 and in 1.10 with 60c6f658b19824de65c76dafdc439ba26fc4f7db (thanks, ickle :)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.